[package]
name = "s3-stress-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
futures = "0.3"
indicatif = "0.17"
bytes = "1.9"
uuid = { version = "1.11", features = ["v4"] }
